      moved to the password hashes themselves, via the new :meth:`~passlib.ifc.PasswordHash.using`
      and :meth:`~passlib.ifc.PasswordHash.needs_update` methods.  This allows much more flexibility
      when using a hash directly, rather than via CryptContext, as well making it easier for
      CryptContext to support hash-specific parameters.

Deprecations
------------
    * The :class:`~passlib.ifc.PasswordHash` API (used by all hashes in passlib),
      has had a number of cleanups made:

        * :meth:`!encrypt` has been renamed to :meth:`~passlib.ifc.PasswordHash.hash`,
          to clarify that it's performing one-way hashing rather than encryption.
          A compatibility alias will remain in place until Passlib 2.0.
          This should fix the longstanding :issue:`21`.

        * The little-used methods :meth:`~passlib.ifc.PasswordHash.genhash` and
          :meth:`~passlib.ifc.PasswordHash.genconfig` have been deprecated.
          Compatibility aliases will remain in place until Passlib 2.0.

        * In order for :meth:`~passlib.ifc.PasswordHash.hash` to take over the job
          previously performed by :meth:`~passlib.ifc.PasswordHash.genhash`, it now accepts
          a keyword ``"config"``, which specifies an existing hash to extract configuration from.

    * The :class:`~passlib.context.CryptContext` object has a number of cleanups made:

        * :meth:`!encrypt` was renamed to :meth:`!hash` to match the
          :class:`~passlib.ifc.PasswordHash` API changes listed above.

        * The ``vary_rounds`` option has been deprecated,
          and will be removed in Passlib 2.0.  It provided very little security benefit,
          and was judged not worth the additional code complexity it requires.

        * The special wildcard ``all`` scheme name
          has been deprecated, and will be removed in Passlib 2.0.  The only legitimate use
          was to support ``vary_rounds``, which itself will be removed in 2.0.
