@@ -279,33 +279,19 @@ class SequenceMixin(object):
 # unicode helpers
 #=============================================================================
 
+# XXX: should this be moved to passlib.crypto, or compat backports?
+
 def consteq(left, right):
     """Check two strings/bytes for equality.
-    This is functionally equivalent to ``left == right``,
-    but attempts to take constant time relative to the size of the righthand input.
 
-    The purpose of this function is to help prevent timing attacks
-    during digest comparisons: the standard ``==`` operator aborts
-    after the first mismatched character, causing its runtime to be
-    proportional to the longest prefix shared by the two inputs.
-    If an attacker is able to predict and control one of the two
-    inputs, repeated queries can be leveraged to reveal information about
-    the content of the second argument. To minimize this risk, :func:`!consteq`
-    is designed to take ``THETA(len(right))`` time, regardless
-    of the contents of the two strings.
-    It is recommended that the attacker-controlled input
-    be passed in as the left-hand value.
+    This function uses an approach designed to prevent
+    timing analysis, making it appropriate for cryptography.
+    a and b must both be of the same type: either str (ASCII only),
+    or any type that supports the buffer protocol (e.g. bytes).
 
-    .. warning::
-
-        This function is *not* perfect. Various VM-dependant issues
-        (e.g. the VM's integer object instantiation algorithm, internal unicode representation, etc),
-        may still cause the function's run time to be affected by the inputs,
-        though in a less predictable manner.
-        *To minimize such risks, this function should not be passed* :class:`unicode`
-        *inputs that might contain non-* ``ASCII`` *characters*.
-
-    .. versionadded:: 1.6
+    Note: If a and b are of different lengths, or if an error occurs,
+    a timing attack could theoretically reveal information about the
+    types and lengths of a and b--but not their values.
     """
     # NOTE:
     # resources & discussions considered in the design of this function:
@@ -352,6 +338,18 @@ def consteq(left, right):
         for l,r in zip(tmp, right):
             result |= ord(l) ^ ord(r)
     return result == 0
+
+# keep copy of this around since stdlib's version throws error on non-ascii chars in unicode strings.
+# our version does, but suffers from some underlying VM issues.  but something is better than
+# nothing for plaintext hashes, which need this.  everything else should use consteq(),
+# since the stdlib one is going to be as good / better in the general case.
+str_consteq = consteq
+
+try:
+    # for py3.3 and up, use the stdlib version
+    from hmac import compare_digest as consteq
+except ImportError:
+    pass
 
 def splitcomma(source, sep=","):
     """split comma-separated string into list of elements,
